# tetra-host

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.torsor/: charter.md  llms.txt  torsor.toml
alembic/: env.py
app/: cache.py  config.py  csrf.py  db.py  dependencies.py  main.py  models.py  observability.py  plugins.py  rate_limit.py  security.py  templating.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OIDC_WEBMAIL_SSO.md  OPERATIONS.md
nginx/: tetra-host.conf
scripts/: bootstrap-admin.sh  check-production.sh  gen-oidc-key.sh  install-mailcow.sh  install-registry.sh  install.sh  tetra
systemd/: tetra-console.service  tetra-host.service
tests/: conftest.py  test_account.py  test_account_menu.py  test_admin.py  test_admin_overview_api.py  test_ai_gateway.py  test_ai_reseller.py  test_alembic.py  test_analytics_api.py  test_api.py  test_api_tokens.py  test_app.py  test_app_catalog.py  test_apps_api.py  test_audit.py  test_auth.py  test_billing.py  test_bootstrap_role.py  test_build_diagnostics.py  test_builder.py  test_cli.py  test_compute.py  test_coolify_deployments.py  test_cron.py  test_csrf_middleware.py  test_dashboard_metrics.py  test_databases_api.py  test_deploy_console.py  test_deploy_env.py  test_deploy_hooks.py  test_deploy_rollback.py  test_deploys_stream.py  test_dns.py  test_docker_engine.py  test_domains.py  test_edge.py  test_error_diagnostics.py  test_errors_api.py  test_github_webhook.py  test_graphql.py  (+35 more)
tetra_cli/: __init__.py  (+5 more)
(+463 files in other folders)
