[project]
name = "tetra-host"
version = "0.1.0"
description = "Cloud Industry branded multi-tenant hosting panel powered by Coolify, Mailcow and Cloudflare."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "passlib[bcrypt]>=1.7.4",
  "itsdangerous>=2.2.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.ruff]
line-length = 100
